--- a/scripts/1_fetch_data/config.json
+++ b/scripts/1_fetch_data/config.json
@@ -1,3 +1,4 @@
 {
-    "query": "'(GCF_049350105.2) OR (GCF_037993035.2) OR (GCF_049354715.1) OR (GCF_019923935.1) OR (GCF_028858775.2)'"
+    "query": "'Mammalia'",
+    "partition": 10
 }
