Development of cds extraction pipeline

--- a/scripts/1_fetch_data/config.json
+++ b/scripts/1_fetch_data/config.json
@@ -1,4 +1,4 @@
 {
-    "query": "'(GCF_049350105.2) OR (GCF_037993035.2) OR (GCF_049354715.1) OR (GCF_019923935.1) OR (GCF_028858775.2) OR (GCF_049852395.1) OR (GCF_029281585.2) OR (GCF_028885625.2) OR (GCF_048593235.1) OR (GCF_028878055.3)'",
+    "query": "'(GCF_028858775.2) OR (GCF_028885625.2) OR (GCF_049350105.2) OR (GCF_049354715.1) OR (GCF_041296265.1) OR (GCF_018350175.1) OR (GCF_011100685.1) OR (GCF_002263795.3) OR (GCF_964237555.1) OR (GCF_016699485.2) OR (GCF_000001215.4) OR (GCF_000001405.40) OR (GCF_029281585.2) OR (GCF_028878055.3) OR (GCF_037993035.2) OR (GCF_047675955.1) OR (GCF_003254725.2) OR (GCF_048164855.1) OR (GCF_000003025.6) OR (GCF_029378745.1) OR (GCF_019923935.1) OR (GCF_016772045.2) OR (GCF_001704415.2) OR (GCF_049852395.1) OR (GCF_000001635.27) OR (GCF_036323735.1) OR (GCF_048593235.1) OR (GCF_905237065.1) OR (GCF_049306965.1) OR (GCF_048771995.1)'",
     "partition": 1
 }
